# FerriEntregas-AI

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
EasyOCR/: train_script.py
EasyOCR/dataset/labels/: F26.txt
EasyOCR/trainer/: dataset.py  test.py  train.py
