[project]
name = "ferriai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "keras-ocr>=0.9.3",
    "ninja>=1.11.1.4",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.1.0",
    "pyclipper>=1.3.0.post6",
    "pytesseract>=0.3.13",
    "python-bidi>=0.6.6",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "shapely>=2.0.7",
    "torch>=2.6.0",
    "torchvision>=0.5",
    "uvicorn>=0.34.0",
]
